<resources>
    <string name="app_name">FlickrDemoApp</string>

    <!-- FlickrPhotoGalleryFragment start -->
    <string name="load_more">Load More</string>
    <string name="generic_error_message">Something went wrong, please try again later</string>
    <string name="network_not_available">Network not available</string>
    <string name="page_loaded_msg">Loaded page %d of %d</string>
    <!-- FlickrPhotoGalleryFragment end -->

    <!-- flickr_photo_details_fragment_layout start -->
    <string name="id">Id</string>
    <string name="owner">Owner</string>
    <string name="title">Title</string>
    <string name="server">Server</string>
    <string name="url">URL</string>
    <!-- flickr_photo_details_fragment_layout end -->

    <!-- Settings start -->
    <string name="clear_mem_cache">Clear Mem Cache</string>
    <string name="clear_disk_cache">Clear Disk Cache</string>
    <string name="start_auto_scroll">Start Auto Scroll</string>
    <!-- Settings end -->
</resources>
